# openapi.yaml
@@ -67,6 +67,11 @@ paths:
               - mrz
               - vat
               - eori
+              - cusip
+              - sedol
+              - figi
+              - cas
+              - isni
         - name: value
           in: path
           required: true
@@ -112,6 +117,11 @@ paths:
               - iban
               - luhn
               - rf
+              - cusip
+              - sedol
+              - figi
+              - cas
+              - isni
         - name: body
           in: path
           required: true
